internal/gatewayapi/testdata/policy-cross-namespace-targetselector-valid-referencegrant.out.yaml
backendTrafficPolicies:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: BackendTrafficPolicy
  metadata:
    name: cross-ns-policy
    namespace: policy-ns
  spec:
    targetSelectors:
    - group: gateway.networking.k8s.io
      kind: Gateway
      matchLabels:
        policy: selected
      namespaces:
        from: All
    useClientProtocol: true
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: target-gateway
        namespace: policy-target-a
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    labels:
      policy: selected
    name: target-gateway
    namespace: policy-target-a
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http
      port: 80
      protocol: HTTP
  status:
    listeners:
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    labels:
      policy: namespace-selector
    name: selector-gateway
    namespace: policy-target-selector
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http
      port: 80
      protocol: HTTP
  status:
    listeners:
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: target-route
    namespace: policy-target-a
  spec:
    parentRefs:
    - name: target-gateway
      sectionName: http
    rules:
    - backendRefs:
      - name: target-service
        port: 8080
      matches:
      - path:
          value: /
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: target-gateway
        sectionName: http
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: selector-route
    namespace: policy-target-selector
  spec:
    parentRefs:
    - name: selector-gateway
      sectionName: http
    rules:
    - backendRefs:
      - name: selector-service
        port: 8080
      matches:
      - path:
          value: /
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: selector-gateway
        sectionName: http
infraIR:
  policy-target-a/target-gateway:
    proxy:
      listeners:
      - name: policy-target-a/target-gateway/http
        ports:
        - containerPort: 10080
          name: http-80
          protocol: HTTP
          servicePort: 80
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: target-gateway
          gateway.envoyproxy.io/owning-gateway-namespace: policy-target-a
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: policy-target-a/target-gateway
      namespace: envoy-gateway-system
  policy-target-selector/selector-gateway:
    proxy:
      listeners:
      - name: policy-target-selector/selector-gateway/http
        ports:
        - containerPort: 10080
          name: http-80
          protocol: HTTP
          servicePort: 80
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: selector-gateway
          gateway.envoyproxy.io/owning-gateway-namespace: policy-target-selector
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: policy-target-selector/selector-gateway
      namespace: envoy-gateway-system
xdsIR:
  policy-target-a/target-gateway:
    accessLog:
      json:
      - path: /dev/stdout
    backends:
    - metadata:
        kind: HTTPRoute
        name: target-route
        namespace: policy-target-a
      name: httproute/policy-target-a/target-route/rule/0
      settings:
      - addressType: IP
        endpoints:
        - host: 8.8.8.8
          port: 8080
        metadata:
          kind: Service
          name: target-service
          namespace: policy-target-a
          sectionName: "8080"
        name: httproute/policy-target-a/target-route/rule/0/backend/0
        protocol: HTTP
        weight: 1
    - metadata:
        kind: Service
        name: envoy-policy-target-a-target-gateway-e4ecf2e1
        namespace: envoy-gateway-system
        sectionName: "8080"
      name: policy-target-a/target-gateway
      settings:
      - addressType: IP
        endpoints:
        - host: 7.6.5.4
          port: 8080
          zone: zone1
        metadata:
          kind: Service
          name: envoy-policy-target-a-target-gateway-e4ecf2e1
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: policy-target-a/target-gateway
        protocol: TCP
    globalResources:
      proxyServiceCluster:
        backendClusterRefs:
        - name: policy-target-a/target-gateway
        metadata:
          kind: Service
          name: envoy-policy-target-a-target-gateway-e4ecf2e1
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: policy-target-a/target-gateway
    http:
    - address: 0.0.0.0
      externalPort: 80
      hostnames:
      - '*'
      metadata:
        kind: Gateway
        name: target-gateway
        namespace: policy-target-a
        sectionName: http
      name: policy-target-a/target-gateway/http
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
      routes:
      - destination:
          backendClusterRefs:
          - name: httproute/policy-target-a/target-route/rule/0
            weight: 1
          metadata:
            kind: HTTPRoute
            name: target-route
            namespace: policy-target-a
          name: httproute/policy-target-a/target-route/rule/0
        hostname: '*'
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: target-route
          namespace: policy-target-a
          policies:
          - kind: BackendTrafficPolicy
            name: cross-ns-policy
            namespace: policy-ns
        name: httproute/policy-target-a/target-route/rule/0/match/0/*
        pathMatch:
          distinct: false
          name: ""
          prefix: /
        traffic: {}
        useClientProtocol: true
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
  policy-target-selector/selector-gateway:
    accessLog:
      json:
      - path: /dev/stdout
    backends:
    - metadata:
        kind: HTTPRoute
        name: selector-route
        namespace: policy-target-selector
      name: httproute/policy-target-selector/selector-route/rule/0
      settings:
      - addressType: IP
        endpoints:
        - host: 8.8.4.4
          port: 8080
        metadata:
          kind: Service
          name: selector-service
          namespace: policy-target-selector
          sectionName: "8080"
        name: httproute/policy-target-selector/selector-route/rule/0/backend/0
        protocol: HTTP
        weight: 1
    - metadata:
        kind: Service
        name: envoy-policy-target-selector-selector-gateway-45fe5771
        namespace: envoy-gateway-system
        sectionName: "8080"
      name: policy-target-selector/selector-gateway
      settings:
      - addressType: IP
        endpoints:
        - host: 7.6.5.4
          port: 8080
          zone: zone1
        metadata:
          kind: Service
          name: envoy-policy-target-selector-selector-gateway-45fe5771
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: policy-target-selector/selector-gateway
        protocol: TCP
    globalResources:
      proxyServiceCluster:
        backendClusterRefs:
        - name: policy-target-selector/selector-gateway
        metadata:
          kind: Service
          name: envoy-policy-target-selector-selector-gateway-45fe5771
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: policy-target-selector/selector-gateway
    http:
    - address: 0.0.0.0
      externalPort: 80
      hostnames:
      - '*'
      metadata:
        kind: Gateway
        name: selector-gateway
        namespace: policy-target-selector
        sectionName: http
      name: policy-target-selector/selector-gateway/http
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
      routes:
      - destination:
          backendClusterRefs:
          - name: httproute/policy-target-selector/selector-route/rule/0
            weight: 1
          metadata:
            kind: HTTPRoute
            name: selector-route
            namespace: policy-target-selector
          name: httproute/policy-target-selector/selector-route/rule/0
        hostname: '*'
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: selector-route
          namespace: policy-target-selector
        name: httproute/policy-target-selector/selector-route/rule/0/match/0/*
        pathMatch:
          distinct: false
          name: ""
          prefix: /
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
